--- a/newsletter/.github/workflows/deploy.yml
+++ b/newsletter/.github/workflows/deploy.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches:
-      - "master"
+      - 'master'
 
 jobs:
   build_site:
@@ -29,7 +29,7 @@ jobs:
 
       - name: build
         env:
-          BASE_PATH: "/jovialhsu.github.io/newsletter/"
+          BASE_PATH: '/jovialhsu.github.io/newsletter'
         run: |
           npm run build
           touch build/.nojekyll
@@ -38,7 +38,7 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           # this should match the `pages` option in your adapter-static options
-          path: "build/"
+          path: 'build/'
 
   deploy:
     needs: build_site
